# Software-Engineering-Project

./: Gantt.xlsx  README.md
Benchmarking/: Benchmarking.xlsx
Benchmarking/L_vs_L2/: Plot_L_vs_L2.fig  Plot_L_vs_L2.m
CIS/: CIS.pro  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mathtools.h  segmentation.cpp  segmentation.cpp.autosave  segmentation.h  test.h  tester.cpp  tester.h  widgets.cpp  widgets.h
CIS/cmake/: FindEigen.cmake
CIS/src/: main.cpp  mainwindow.cpp  mainwindow.h  mathtools.h  segmentation.cpp  segmentation.h  tester.h  widgets.cpp  widgets.h
Cuda/build-cuda_base-Desktop_Qt_5_5_0_clang_64bit-Debug/: Makefile
Cuda/build-cuda_solver-Desktop_Qt_5_5_0_clang_64bit-Debug/: Makefile
Cuda/cuda_base/: cuda_base.pro  mainwindow.cpp  mainwindow.h
Cuda/cuda_base/cuda/: wrappers.cu  wrappers.cuh
Cuda/cuda_base/qtcuda.app/Contents/MacOS/: qtcuda
Cuda/cuda_solver/: cuda_code.cu  cuda_solver.pro  main.cpp
Cuda/cuda_solver/qtcuda.app/Contents/: Info.plist
Cuda/cuda_solver/qtcuda.app/Contents/MacOS/: qtcuda
gTestData/: .matISOutput.gtd.swp  graphOutput.gtd  l2+Is.gtd  l2Output.gtd  systemSolverInput.gtd  systemSolverOutput.gtd
report/: main.tex
report/Format/: beamerinnerthemeFeather.sty  beamerouterthemeFeather.sty  beamerthemeFeather.sty
report/figures/: x_LL2_time.eps
